--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '${project.version}'
 main: me.piglinstudio.judgmentnight.JudgmentNight
 api-version: '1.16'
 commands:
-    startNight:
-      permission: startNight.permission
-    stopNight:
-      permission: stopNight.permission
+    night:
+      permission:
+       startNight.permission
+       stopNight.permission
